# naics_embedding

./: .gitignore  MODELING.md  README.md  pyproject.toml  requirements.txt
docs/: publication_cells.csv
examples/: hbm_kernel_example.py
src/: cells.py  compare_b.py  compare_c.py  corpus.py  embed.py  fetch.py  heatmap.py  matrix.py  reduce.py  similar.py
